# backend/docs/swagger.yaml
@@ -250,7 +250,7 @@ paths:
       security:
       - BearerAuth: []
       summary: タスクを完了にする
-  /auth/tasks/waitlist:
+  /auth/tasks/waitlist/add:
     put:
       parameters:
       - description: user_id
@@ -277,6 +277,28 @@ paths:
       security:
       - BearerAuth: []
       summary: タスクをやる順リストの末尾に追加する
+  /auth/tasks/waitlist/reorder:
+    put:
+      parameters:
+      - description: user_id
+        in: query
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: あるタスクのwaitlist_numを指定の位置に挿入する
   /create_account:
     post:
       consumes:
